<resources>
    <string name="app_name">andersen_home_work_5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">сохранить</string>
    <string name="PhoneNumber">Телефон</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="city">Город</string>
    <string name="email">email</string>
</resources>