<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContactDetailsFragment">


    <EditText
        android:id="@+id/numberPhoneEditText"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/PhoneNumber"
        />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/surnameEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/surname" />

    <EditText
        android:id="@+id/cityEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/city"/>

    <EditText
        android:id="@+id/emailEditText"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/email" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:text="@string/save" />

</androidx.appcompat.widget.LinearLayoutCompat>